GEAR-31 Init swagger and refactor Offer (#6)
* GK-7 Init swagger

* Update after code review and fix tests

* Update and refactor

* Update OfferControllerIntegrationTest and delete old DTO